--- a/functions/package.json
+++ b/functions/package.json
@@ -14,12 +14,9 @@
   "main": "index.js",
   "dependencies": {
     "busboy": "^0.3.1",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
     "firebase": "^7.19.1",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1",
-    "uuidv4": "^6.2.3"
+    "firebase-functions": "^3.6.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
